--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -155,8 +155,8 @@
     <string name="deny">拒绝</string>
     <string name="allow">允许</string>
     <string name="ctrl_consent_title">PCAPdroid 控制请求</string>
-    <string name="ctrl_consent_denied">控制请求被拒绝</string>
-    <string name="ctrl_consent_allowed">控制请求被允许</string>
+    <string name="ctrl_consent_denied">PCAPdroid: 控制请求被拒绝</string>
+    <string name="ctrl_consent_allowed">PCAPdroid: 控制请求被允许</string>
     <string name="capture_interface">捕获接口</string>
     <string name="internet">互联网</string>
     <string name="all_interfaces">所有接口</string>
