--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,5 +210,6 @@
     <string name="control_permissions_item">%1$s: %2$s</string>
     <string name="country">Country</string>
     <string name="asn">ASN</string>
+    <string name="country_val">Country: %1$s</string>
 </resources>
 
