--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,8 +183,6 @@
     <string name="security">Security</string>
     <string name="malware_detection">Malware Detection</string>
     <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists. The detection can produce false positives and is not a valid alternative to an antivirus.</string>
-    <string name="blacklists_status">Blacklists Status</string>
-    <string name="blacklists_status_summary">Up-to-date: %1$d/%2$d ― Domain rules: %3$s ― IP rules: %4$s\nLast update: %5$s</string>
     <string name="reset">Reset</string>
     <string name="malware_whitelist">Malware Whitelist</string>
     <string name="malware_whitelist_rules">Malware Whitelist Rules</string>
@@ -227,10 +225,11 @@
     <string name="n_rules">%1$s rules</string>
     <string name="last_update_val">Last update: %1$s</string>
     <string name="malicious_connections">Malicious connections</string>
-    <string name="blacklists_uptodate">Blacklists up to date</string>
+    <string name="updated_blacklists">Updated blacklists</string>
     <string name="connections_checked">Connections checked</string>
     <string name="last_blacklists_update">Last update</string>
     <string name="domain_rules">Domain rules</string>
     <string name="ip_rules">IP rules</string>
+    <string name="malware_status_update_failed">Some blacklists are outdated</string>
 </resources>
 
