Ability to manually update the blacklists
The update status is now also shown

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -231,5 +231,7 @@
     <string name="domain_rules">Domain rules</string>
     <string name="ip_rules">IP rules</string>
     <string name="malware_status_update_failed">Some blacklists are outdated</string>
+    <string name="update_now">Update now</string>
+    <string name="status_updating">Updating…</string>
 </resources>
 
