--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -167,7 +167,7 @@
     <string name="show_only_malicious">恶意连接</string>
     <string name="security">安全</string>
     <string name="malware_detection">恶意软件检测</string>
-    <string name="malware_detection_summary">通过第三方黑名单检测到已知恶意主机的连接。这种检测可能产生误报，并不是反病毒软件的有效替代方案。</string>
+    <string name="malware_detection_summary">通过第三方黑名单检测到已知恶意主机的连接。</string>
     <string name="reset">重置</string>
     <string name="malware_whitelist">恶意软件白名单</string>
     <string name="malware_whitelist_rules">恶意软件白名单规则</string>
