Add warning in SOCKS5 mode with no app filter
Closes #143

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,4 +237,5 @@
     <string name="malware_detection_learn_more">Learn more about the malware detection feature</string>
     <string name="private_dns_message_notice">Private DNS prevents PCAPdroid from inspecting the DNS traffic. You can disable it from the Android network settings.</string>
     <string name="private_dns_hinders_detection">Private DNS hinders detection</string>
+    <string name="decryption_no_filter_warn">When performing TLS decryption you should select a target app to avoid breaking Internet connectivity</string>
 </resources>
