Update IT translation

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -174,5 +174,42 @@
     <string name="malware_detection_ad0">Sei pronto a migliorare la sicurezza del tuo dispositivo?</string>
     <string name="malware_detection_ad1">Scopri il rilevamento malware in PCAPdroid!</string>
     <string name="show_me">Mostrami</string>
+    <string name="hint">Suggerimento</string>
+    <string name="once">Una volta</string>
+    <string name="forever">Per sempre</string>
+    <string name="control_permissions">Permessi di Controllo</string>
+    <string name="control_permissions_summary">Controlla a quali app è permesso controllare la cattura di PCAPdroid.</string>
+    <string name="control_permissions_item">%1$s: %2$s</string>
+    <string name="country">Nazione</string>
+    <string name="asn">ASN</string>
+    <string name="country_val">Nazione: %1$s</string>
+    <string name="send_report">Invia Report</string>
+    <string name="start_at_boot">Cattura all\'avvio</string>
+    <string name="start_at_boot_summary">Se abilitato, avvia automaticamente la cattura all\'accensione del dispositivo.</string>
+    <string name="malware_status_ok">Nessun traffico malevolo rilevato</string>
+    <string name="malware_status_detected">Connessioni malevole rilevate</string>
+    <string name="whitelist">Whitelist</string>
+    <string name="blacklists">Blacklist</string>
+    <string name="status_outdated">Non aggiornato</string>
+    <string name="status_not_loaded">Non caricato</string>
+    <string name="status_uptodate">Aggiornato</string>
+    <string name="blacklist_type">"Tipo: %1$s"</string>
+    <string name="blacklist_type_ip">Blacklist di IP</string>
+    <string name="blacklist_type_domain">Blacklist di domini</string>
+    <string name="n_rules">%1$s regole</string>
+    <string name="last_update_val">Ultimo aggiornamento: %1$s</string>
+    <string name="malicious_connections">Connessioni malevole</string>
+    <string name="updated_blacklists">Blacklist aggiornate</string>
+    <string name="connections_checked">Connessioni controllate</string>
+    <string name="last_blacklists_update">Ultimo aggiornamento</string>f
+    <string name="domain_rules">Regole di domini</string>
+    <string name="ip_rules">Regole IP</string>
+    <string name="malware_status_update_failed">Alcune blacklist non sono aggiornate</string>
+    <string name="update_now">Aggiorna ora</string>
+    <string name="status_updating">In aggiornamento…</string>
+    <string name="malware_detection_learn_more">Scopri di più sulla funzione di rilevamento malware</string>
+    <string name="private_dns_message_notice">IL DNS privato impedisce a PCAPdroid di ispezionare il traffico DNS. Puoi disattivarlo dalle impostazioni di rete di Android.</string>
+    <string name="private_dns_hinders_detection">Il DNS privato ostacola il rilevamento</string>
+    <string name="decryption_no_filter_warn">Per decifrare il traffico TLS è necessario impostare un filtro app per evitare di perdere la connettività di rete</string>
 </resources>
 
