--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -114,6 +114,7 @@
     <string name="host_val">Host: %1$s</string>
     <string name="protocol_val">Protocollo: %1$s</string>
     <string name="whitelist_action">Escludi…</string>
+    <string name="hide">Nascondi…</string>
     <string name="n_selected">%1$d selezionati</string>
     <string name="select_all">Seleziona tutto</string>
     <string name="app_details">Dettaglio App</string>
