Fix blocking by host not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,6 +246,7 @@
     <string name="n_pkts">%1$s pkts</string>
     <string name="show_only_blocked">Blocked by firewall</string>
     <string name="blocked_connection_filter">blocked</string>
+    <string name="paid_features">Paid Features</string>
     <string name="unlock_code">Unlock Code</string>
     <string name="validate">Validate</string>
     <string name="valid">Valid</string>
