Add ability to filter by interface in root mode
When the capture interface is set to "All Interfaces", it is now
possible to filter connections by interface. The interface is also shown
into the connection details.

Closes #163

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -253,4 +253,6 @@
     <string name="invalid">Invalid</string>
     <string name="system_id">System ID</string>
     <string name="no_intent_handler_found">No app found to perform this action</string>
+    <string name="network_interface">Interface</string>
+    <string name="interface_filter">Interface: %1$s</string>
 </resources>
